# aztec3-circuits

./: .gitignore  README.md  bootstrap.sh  circuits.code-workspace  package.json
cpp/src/aztec3/: CMakeLists.txt  constants.hpp
cpp/src/aztec3/circuits/: hash.hpp
cpp/src/aztec3/circuits/abis/: .test.cpp  append_only_tree_snapshot.hpp  c_bind.cpp  c_bind.h  c_bind.test.cpp  call_context.hpp  call_stack_item.hpp  contract_deployment_data.hpp  function_data.hpp  function_leaf_preimage.hpp  membership_witness.hpp  optionally_revealed_data.hpp  private_circuit_public_inputs.hpp  public_circuit_public_inputs.hpp  signed_tx_request.hpp  state_read.hpp  state_transition.hpp  tx_context.hpp  tx_request.hpp  tx_signature.hpp  verifier_reference_string.hpp
cpp/src/aztec3/circuits/apps/: .test.cpp  contract.hpp  contract.tpp  function_declaration.hpp  function_execution_context.hpp  l1_call.hpp  l1_function_interface.hpp  l1_function_interface.tpp  oracle_wrapper.hpp  private_state.test.cpp  utxo_datum.hpp
cpp/src/aztec3/circuits/apps/opcodes/: opcodes.hpp  (+1 more)
cpp/src/aztec3/circuits/mock/: mock_circuit.hpp  mock_kernel_circuit.hpp
cpp/src/aztec3/circuits/recursion/: aggregator.hpp  play.test.cpp  play_app_circuit.hpp  play_recursive_circuit.hpp
cpp/src/aztec3/dbs/: private_state_db.hpp
cpp/src/aztec3/oracle/: fake_db.hpp
cpp/src/aztec3/utils/: CMakeLists.txt  array.hpp
cpp/src/aztec3/utils/nullifier_tree/: CMakeLists.txt  hash.hpp  memory_store.hpp  nullifier_leaf.hpp  nullifier_tree.cpp
cpp/src/aztec3/utils/types/: circuit_types.hpp  convert.hpp  native_types.hpp
(+141 files in other folders)
